refactor: add hover for visited links

--- a/static/css/index.css
+++ b/static/css/index.css
@@ -108,7 +108,7 @@ main p {
   color: var(--a-color);
 }
 
-.link:hover {
+.link:hover, .link:visited:hover {
   color: var(--a-hovered);
   text-decoration: underline;
 }
