chore: re-organize refactor: add curve borders to comparison images

--- a/static/css/foss_projects.css
+++ b/static/css/foss_projects.css
@@ -45,6 +45,7 @@
 .comparison-img-box img {
   cursor: pointer;
   transition: transform 0.3s ease;
+  border-radius: 5px;
 }
 
 .comparison-img-box img:hover {
