--- a/static/templates/contacts.html
+++ b/static/templates/contacts.html
@@ -7,7 +7,7 @@
     <meta name="description" content="Contact" />
     <meta name="keywords" content="contact" />
     <title>Jessie Wilson - Contact</title>
-    <link rel="stylesheet" type="text/css" href="static/css/index.css" />
+    <link rel="stylesheet" type="text/css" href="../css/index.css" />
   </head>
   <body>
     <container class="container">
@@ -15,7 +15,7 @@
         <h1>Contact</h1>
         <nav>
           <span
-            ><a href="./index.html" class="link">About Me</a> /
+            ><a href="/" class="link">About Me</a> /
             <a href="./foss_projects.html" class="link">FOSS Projects</a> /
             <a href="./contacts.html" class="link">Contact</a></span
           >
