--- a/static/templates/foss_projects.html
+++ b/static/templates/foss_projects.html
@@ -7,12 +7,8 @@
     <meta name="description" content="Foss" />
     <meta name="keywords" content="foss" />
     <title>Jessie Wilson - FOSS</title>
-    <link rel="stylesheet" type="text/css" href="static/css/index.css" />
-    <link
-      rel="stylesheet"
-      type="text/css"
-      href="static/css/foss_projects.css"
-    />
+    <link rel="stylesheet" type="text/css" href="../css/index.css" />
+    <link rel="stylesheet" type="text/css" href="../css/foss_projects.css" />
   </head>
   <body>
     <container class="container">
@@ -20,7 +16,7 @@
         <h1>FOSS Projects</h1>
         <nav>
           <span
-            ><a href="./index.html" class="link">About Me</a> /
+            ><a href="/" class="link">About Me</a> /
             <a href="./foss_projects.html" class="link">FOSS Projects</a> /
             <a href="./contacts.html" class="link">Contact</a></span
           >
@@ -32,7 +28,7 @@
           class="link img-link"
           href="https://github.com/jlw4049/Blog-Flask"
           target="_blank"
-          ><img src="static/images/flask.png" alt="flask" />
+          ><img src="../images/flask.png" alt="flask" />
           <h2>Flask Blog</h2></a
         >
         <h3>
@@ -61,7 +57,7 @@
           >
         </h3>
         <div class="tech-img-box">
-          <img src="static/images/flask_register.png" />
+          <img src="../images/flask_register.png" />
         </div>
         <hr class="hr" />
 
@@ -250,5 +246,5 @@
       </main>
     </container>
   </body>
-  <script src="static/js/foss_projects.js" type="text/javascript"></script>
+  <script src="../js/foss_projects.js" type="text/javascript"></script>
 </html>
