--- a/static/templates/contacts.html
+++ b/static/templates/contacts.html
@@ -6,6 +6,24 @@
     <meta name="author" content="Jessie Wilson - Contact" />
     <meta name="description" content="Contact" />
     <meta name="keywords" content="contact" />
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="../favicon/apple-touch-icon.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="../favicon/favicon-32x32.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="../favicon/favicon-16x16.png"
+    />
+    <link rel="manifest" href="../favicon/site.webmanifest" />
     <title>Jessie Wilson - Contact</title>
     <link rel="stylesheet" type="text/css" href="../css/index.css" />
   </head>
