--- a/static/css/index.css
+++ b/static/css/index.css
@@ -106,6 +106,7 @@ main p {
   display: inline-flex;
   align-items: center;
   text-decoration: none;
+  font-weight: 500;
   color: var(--a-color);
 }
 
