fix: spelling/grammar

--- a/static/templates/foss_projects.html
+++ b/static/templates/foss_projects.html
@@ -61,8 +61,8 @@
           <span class="italic-span"
             >Fully functional blog written in Flask. It has support for basic
             account management, supports posting/editing/deleting blogs with
-            pagination. This was written written when I initially started
-            learning Flask. You can view the source code at github.</span
+            pagination. This was developed when I initially started learning
+            Flask. You can view the source code at github.</span
           >
         </h3>
         <h3>
