feat: add navigation 'Projects'

--- a/static/templates/contacts.html
+++ b/static/templates/contacts.html
@@ -34,6 +34,7 @@
         <nav>
           <span
             ><a href="/" class="link">About Me</a> /
+            <a href="./projects.html" class="link">Projects</a> /
             <a href="./foss_projects.html" class="link">FOSS Projects</a> /
             <a href="./contacts.html" class="link">Contact</a></span
           >
@@ -101,6 +102,5 @@
       </main>
     </container>
   </body>
-  <script src="static/js/foss_projects.js" type="text/javascript"></script>
   <script src="../js/index.js" type="text/javascript"></script>
 </html>
