--- a/static/templates/foss_projects.html
+++ b/static/templates/foss_projects.html
@@ -35,6 +35,7 @@
         <nav>
           <span
             ><a href="/" class="link">About Me</a> /
+            <a href="./projects.html" class="link">Projects</a> /
             <a href="./foss_projects.html" class="link">FOSS Projects</a> /
             <a href="./contacts.html" class="link">Contact</a></span
           >
