--- a/static/templates/projects.html
+++ b/static/templates/projects.html
@@ -66,7 +66,92 @@
         </svg>
       </header>
       <hr class="hr" />
-      <main></main>
+      <main>
+        <a class="link img-link" href="https://www.kaleen.com/" target="_blank"
+          ><img src="../images/kaleen.png" alt="kaleen" />
+          <h2>Kaleen</h2></a
+        >
+        <h3>
+          About,
+          <span class="italic-span"
+            >Kaleen is an international manufacturer of beautiful handmade area
+            rugs. Headquartered in Mumbai, we have various international
+            operations with our United States office and distribution locations
+            in Dalton, Georgia. Kaleen's “Point of Pride & Commitment to
+            Customer Satisfaction” is a reflection of the proven success for
+            over 40 years within the textile industry.</span
+          >
+        </h3>
+        <h3>
+          Technologies,
+          <span class="italic-span"
+            >Wordpress / PHP / CSS / HTML / JavaScript / jQuery / SQL /
+            Python</span
+          >
+        </h3>
+        <h3>
+          Tasks,
+          <span class="italic-span"
+            >I was brought on board an existing site to oversee a range of tasks
+            spanning over a year. Below are some highlights of the
+            accomplishments during this period
+          </span>
+        </h3>
+        <ul>
+          <li>
+            Successfully migrated the server infrastructure from WordPress
+            Engine to a Linux/Nginx setup.
+          </li>
+          <li>
+            Led a small team of developers, ensuring prompt completion of
+            assigned tasks.
+          </li>
+          <li>
+            Implemented extensive optimizations and rewrote a significant
+            portion of the site's code and database queries to accommodate the
+            growing product catalog.
+          </li>
+          <li>
+            Developed custom scripts to accurately import hundreds of thousands
+            of data rows on a monthly basis, thereby keeping the site updated
+            with the latest information..
+          </li>
+          <li>
+            Created a bespoke filter system tailored to the site's inventory of
+            rugs and carpets. The system enables users to filter products based
+            on availability, stock, style, material, construction, color, shape,
+            and size.
+          </li>
+        </ul>
+        <div class="tech-img-box">
+          <img src="../images/kaleen_filter.png" />
+        </div>
+        <p></p>
+        <div class="tech-img-box">
+          <img src="../images/kaleen_collections.png" />
+        </div>
+        <p></p>
+        <div class="tech-img-box">
+          <img src="../images/kaleen_features1.png" />
+        </div>
+        <p></p>
+        <div class="tech-img-box">
+          <img src="../images/kaleen_features2.png" />
+        </div>
+        <p></p>
+        <div class="tech-img-box">
+          <img src="../images/kaleen_features3.png" />
+        </div>
+        <p></p>
+        <div class="tech-img-box">
+          <img src="../images/kaleen_features4.png" />
+        </div>
+        <p></p>
+        <div class="tech-img-box">
+          <img src="../images/kaleen_menu.png" />
+        </div>
+        <hr class="hr" />
+      </main>
     </container>
   </body>
   <script src="../js/index.js" type="text/javascript"></script>
