feat: add bd fix: punctuation

--- a/static/templates/projects.html
+++ b/static/templates/projects.html
@@ -114,7 +114,7 @@
           <li>
             Developed custom scripts to accurately import hundreds of thousands
             of data rows on a monthly basis, thereby keeping the site updated
-            with the latest information..
+            with the latest information.
           </li>
           <li>
             Created a bespoke filter system tailored to the site's inventory of
@@ -149,6 +149,77 @@
         <p></p>
         <div class="tech-img-box">
           <img src="../images/kaleen_menu.png" />
+        </div>
+        <hr class="hr" />
+        <a class="link img-link"
+          ><img src="../images/bd_icon.png" alt="bd" />
+          <h2>Media Manager</h2></a
+        >
+        <h3>
+          About,
+          <span class="italic-span"
+            >I developed a private media management site for a client who has
+            granted permission to showcase certain aspects while maintaining
+            anonymity. The site primarily functions as a comprehensive media
+            manager for movie collections.</span
+          >
+        </h3>
+        <h3>
+          Technologies,
+          <span class="italic-span"
+            >Python / Flask / HTML / JavScript / CSS / SQLAlchemy / Postgres /
+            Celery / Redis</span
+          >
+        </h3>
+        <h3>
+          Tasks,
+          <span class="italic-span"
+            >Full development, very notable achievements below
+          </span>
+        </h3>
+        <ul>
+          <li>
+            Implemented automated tasks to parse IMDb and The Movie Database,
+            ensuring a synchronized database.
+          </li>
+          <li>
+            Established a secure user system enabling multiple users to manage
+            their media through the platform.
+          </li>
+          <li>
+            Crafted a highly responsive custom design tailored to user needs.
+          </li>
+          <li>
+            Developed an intuitive administration panel to facilitate client
+            management tasks.
+          </li>
+        </ul>
+        <div class="tech-img-box">
+          <img src="../images/bd_side.png" />
+        </div>
+        <p></p>
+        <div class="tech-img-box">
+          <img src="../images/bd_info.png" />
+        </div>
+        <p></p>
+        <div class="tech-img-box">
+          <img src="../images/bd_info2.png" />
+        </div>
+        <p></p>
+        <div class="tech-img-box">
+          <img src="../images/bd_sug.png" />
+        </div>
+        <p></p>
+        <div class="tech-img-box">
+          <img src="../images/bd_nav.png" />
+        </div>
+        <p></p>
+        <div class="tech-img-box">
+          <img src="../images/bd_tab.png" />
+        </div>
+        <p></p>
+        <div class="tech-img-box">
+          <img src="../images/bd_mobile.png" />
         </div>
         <hr class="hr" />
       </main>
