refactor: update github url

--- a/static/templates/contacts.html
+++ b/static/templates/contacts.html
@@ -84,7 +84,7 @@
           >
         </p>
         <p>
-          <a href="https://github.com/jlw4049" class="link" target="_blank"
+          <a href="https://github.com/jessielw" class="link" target="_blank"
             ><svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
               <path
                 d="m0 0h24v24h-24z"
