--- a/static/templates/foss_projects.html
+++ b/static/templates/foss_projects.html
@@ -126,7 +126,8 @@
             Originally this program was coded in Python/Tkinter, I re-wrote it
             to increase my skills in JavaScript and to learn the Electron
             framework.<br /><br />Note: You can still see the tkinter code on
-            the repo</span
+            the repo in a branch called
+            <span class="bold">old_tkinter</span></span
           >
         </h3>
         <div class="tech-img-box">
